bookingdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking
          image: anujbd11/bms:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  selector:
    app: booking
  ports:
    - port: 80
      targetPort: 3001
