seatdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seat
spec:
  selector:
    matchLabels:
      app: seat
  template:
    metadata:
      labels:
        app: seat
    spec:
      containers:
      - name: seat
        image: anujbd11/bms-seat:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: seat
spec:
  selector:
    app: seat
  ports:
  - port: 80
    targetPort: 3000
