service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bms-seat-service
spec:
  selector:
    app: bms-seat
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5252
      targetPort: 3000
