helloingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /seat
        pathType: ImplementationSpecific
        backend:
          service:
            name: seat
            port:
              number: 80
      - path: /booking
        pathType: Prefix
        backend:
          service:
            name: booking
            port:
              number: 80
